# ThesisDraft

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  empirical_comparison.ipynb  index.html  local_publish.py  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json  test.ipynb
.github/DISCUSSION_TEMPLATE/: q-a.yml  question-website.yml
0.1.7/: 404.html  index.html
0.1.7/Documentation/CompiledModel/: index.html
0.1.7/Documentation/DSGESolver/: index.html
0.1.7/Documentation/ModelConfig/: index.html
0.1.7/Documentation/ModelParser/: index.html
0.1.7/Documentation/Shock/: index.html
0.1.7/Documentation/SolvedModel/: index.html
0.1.7/Guides/config_guide/: index.html
0.1.7/Guides/quickstart/: index.html
0.1.7/installation/: index.html
0.1.7/search/: search_index.json
0.1.8/: 404.html  index.html
0.1.8/Documentation/CompiledModel/: index.html
0.1.8/Documentation/DSGESolver/: index.html
0.1.8/Documentation/ModelConfig/: index.html
0.1.8/Documentation/ModelParser/: index.html
0.1.8/Documentation/Shock/: index.html
0.1.8/contact/: index.html
0.1.8/installation/: index.html
0.1.8/search/: search_index.json
0.1.9/assets/: guide_notebook.ipynb
0.1.9/search/: search_index.json
0.2.2/: 404.html  index.html  tags.json
0.2.2/contact/: index.html
0.2.2/installation/: index.html
Documentation/CompiledModel/: index.html
Documentation/DSGESolver/: index.html
Documentation/ModelConfig/: index.html
Documentation/ModelParser/: index.html
Documentation/Shock/: index.html
Documentation/SolvedModel/: index.html
Guides/config_guide/: index.html
Guides/quickstart/: index.html
MODELS/: NK3.yaml  NK_CGG_POST79.yaml  NK_CGG_POST79_K4Q1.yaml  POST82.yaml  test.yaml
SymbolicDSGE/: __init__.py  fred.py  kalman.py  model_config.py  model_parser.py  shock_generators.py  solver.py
SymbolicDSGE/kalman/: __init__.py  _utils.py  config.py  filter.py  interface.py  pipeline.py  spec.py  validator.py
assets/javascripts/: bundle.79ae519e.min.js
docs/: contact.md  index.md
docs/Documentation/: FilterResult.md  KalmanConfig.md  Shock.md  SolvedModel.md
docs/Guides/: config_guide.md  kalman_config_guide.md  model_config_guide.md  quickstart.md
docs/assets/: test.yaml
hook_scripts/: check_env.py
installation/: index.html
search/: search_index.json
stylesheets/: extra.css
(+30 files in other folders)
